bk_ida/gccida/c1/constrain_operands
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2799:4: error: expected ';' after expression
rtx v20; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2799:5: error: use of undeclared identifier 'v20'
rtx v20; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2800:4: error: expected ';' after expression
rtx v21; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2800:5: error: use of undeclared identifier 'v21'
rtx v21; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2817:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // [rsp+Ch] [rbp-32Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2826:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands && recog_data_0.n_alternatives ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2826:33: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands && recog_data_0.n_alternatives ) 
                                ^~~~~~~~~~~~
                                recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2829:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2831:29: error: use of undeclared identifier 'recog_data_0'
n_operands = ( unsigned int)recog_data_0.n_operands; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2835:15: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
memcpy( dest, recog_data_0.constraints, v4); 
              ^~~~~~~~~~~~
              recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2841:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2849:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[v6]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2866:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2866:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2868:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2868:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2924:1: error: use of undeclared identifier 'v20'
v20 = recog_data_0.operand[v18]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2924:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v20 = recog_data_0.operand[v18]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/recog.c:2925:1: error: use of undeclared identifier 'v21'
v21 = recog_data_0.operand[v6]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/constrain_operands/src/obj/recog.o] Error 1
